ingress/wayshub-backend.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myservice-wayshub-backend
  annotations:
    # kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production-wayshub-backend
spec:
  rules:
  - host: api.ilham.studentdumbways.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wayshub-backend 
            port:
              number: 5000
  ingressClassName: nginx
  tls:
    - hosts:
        - api.ilham.studentdumbways.my.id
      secretName: ssl-wayshub-backend
---
apiVersion: v1
kind: Service
metadata:
  name: wayshub-backend
spec:
  type: ClusterIP
  ports:
  - port: 5000
  selector:
    app: wayshub
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wayshub-backend  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "wayshub"
      deployment: "true"
  template:
    metadata:
      labels:
        app: "wayshub"
        deployment: "true"
    spec:
      containers:
      - name: wayshub-backend
        image: ilhaskam/wayshub-backend-kubernetes:v1
        ports:
        - containerPort: 5000
